--- a/ASC.Web/Views/Shared/_Layout.cshtml
+++ b/ASC.Web/Views/Shared/_Layout.cshtml
@@ -4,11 +4,11 @@
 <header>
     <nav class="white" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo">
+            <a id="logo-container" href="/" class="brand-logo">
                 <img class="responsive-img" src="~/images/logo.jpg" alt="Logo" />
             </a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#">Login</a></li>
+                <li><a href="/Account/Login">Login</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
             <ul id="nav-mobile" class="side-nav">
@@ -96,3 +96,7 @@
         </div>
     </div>
 </footer>
+
+@section Scripts {
+    @RenderSection("Scripts", required: false)
+}
