--- a/ASC.Web/Views/Account/ResetPassword.cshtml
+++ b/ASC.Web/Views/Account/ResetPassword.cshtml
@@ -1,43 +1,48 @@
 ﻿@model ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
+    Layout = "_Layout";
 }
 
-<h2>@ViewData["Title"].</h2>
+<div class="container">
+    <div class="row">
+        <div class="col s12 m6 offset-m3">
+            <form asp-controller="Account" asp-action="ResetPassword" method="post"
+                  class="form-horizontal">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <input asp-for="Code" type="hidden" />
 
-<form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal">
-    <h4>Reset your password.</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <input asp-for="Code" type="hidden" />
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Reset</button>
-        </div>
-    </div>
-</form>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input asp-for="Email" type="email" class="validate" />
+                        <label asp-for="Email" data-error="wrong" data-success="right">Email</label>
+                    </div>
+                </div>
 
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input asp-for="Password" type="password" class="validate" />
+                        <label asp-for="Password" data-error="wrong" data-success="right">Password</label>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input asp-for="ConfirmPassword" type="password" class="validate" />
+                        <label asp-for="ConfirmPassword" data-error="wrong" data-success="right">Confirm Password</label>
+                    </div>
+                </div>
+
+                <div class="row center">
+                    <button class="btn waves-effect waves-light" type="submit">
+                        Submit <i class="material-icons">Reset</i>
+                    </button>
+                </div>
+
+                <div class="row center">
+                    <a asp-action="ForgotPassword">Forgot your password?</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
