--- a/ASC.Web/Views/Account/ResetPasswordEmailConfirmation.cshtml
+++ b/ASC.Web/Views/Account/ResetPasswordEmailConfirmation.cshtml
@@ -1,14 +1,13 @@
-﻿@{
+@{
     ViewData["Title"] = "Reset Password Confirmation";
-    // Layout = "_Layout";
+    Layout = "_Layout";
 }
 
 <div class="row">
     <div class="col s12">
         <div class="card-panel orange lighten-1 margin-bottom-50px margin-top-50px">
             <span class="white-text">
-                Your password has been reset. Please 
-                <a asp-controller="Account" asp-action="Login">click here to log in</a>.
+                Please check your email to reset your password.
             </span>
         </div>
     </div>
