--- a/ASC.Web/Views/Shared/_MasterLayout.cshtml
+++ b/ASC.Web/Views/Shared/_MasterLayout.cshtml
@@ -1,4 +1,4 @@
-@using Microsoft.Extensions.Options;
+﻿@using Microsoft.Extensions.Options;
 @using ASC.Web.Configuration;
 @inject IOptions<ApplicationSettings> _configurationSettings;
 
@@ -19,6 +19,8 @@
     @RenderBody()
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/js/materialize.js"></script>
     <script src="~/js/init.js"></script>
 
