--- a/ASC.Web/wwwroot/css/style.css
+++ b/ASC.Web/wwwroot/css/style.css
@@ -91,3 +91,29 @@ header.secureLayout, main.secureLayout, footer.secureLayout {
 .margin-bottom-0px {
   margin-bottom: 0;
 }
+
+.padding-left-10px {
+  padding-left: 10px;
+}
+
+.input-field .input-validation-error {
+  border-bottom: 1px solid #ff4081 !important;
+  box-shadow: 0 1px 0 0 #ff4081 !important;
+}
+
+.input-field .valid {
+  border-bottom: 1px solid #00e676;
+  box-shadow: 0 1px 0 0 #00e676;
+}
+
+.validation-summary-errors {
+  color: #ff4081;
+}
+
+.margin-top-50px {
+  margin-top: 50px;
+}
+
+.margin-bottom-50px {
+  margin-bottom: 50px;
+}
