--- a/ASC.Web/Views/Account/ResetPassword.cshtml
+++ b/ASC.Web/Views/Account/ResetPassword.cshtml
@@ -35,7 +35,7 @@
 
                 <div class="row center">
                     <button class="btn waves-effect waves-light" type="submit">
-                        Submit <i class="material-icons">Reset</i>
+                        Submit <i class="material-icons right">send</i>
                     </button>
                 </div>
 
