--- a/ASC.Web/Views/Account/ForgotPassword.cshtml
+++ b/ASC.Web/Views/Account/ForgotPassword.cshtml
@@ -3,29 +3,25 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    For more information on how to enable reset password please see this <a href="https://go.microsoft.com/fwlink/?LinkID=532713">article</a>.
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col s12 m6 offset-m3">
+            <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal">
+                <div asp-validation-summary="All" class="text-danger"></div>
 
-@*<form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal">
-    <h4>Enter your email.</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input asp-for="Email" type="email" class="validate" />
+                        <label asp-for="Email" data-error="wrong" data-success="right">Email</label>
+                    </div>
+                </div>
+
+                <div class="row center">
+                    <button class="btn waves-effect waves-light" type="submit">
+                        Reset <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Submit</button>
-        </div>
-    </div>
-</form>*@
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+</div>
