--- a/ASC.Web/Views/Shared/_MasterLayout.cshtml
+++ b/ASC.Web/Views/Shared/_MasterLayout.cshtml
@@ -11,6 +11,7 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="~/css/jquery.dataTables.min.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="~/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="~/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
@@ -22,6 +23,7 @@
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/js/materialize.js"></script>
+    <script src="~/js/jquery.dataTables.min.js"></script>
     <script src="~/js/init.js"></script>
 
     @RenderSection("Scripts", required: false)
