--- a/ASC.Web/Views/Shared/_SecureLayout.cshtml
+++ b/ASC.Web/Views/Shared/_SecureLayout.cshtml
@@ -54,8 +54,12 @@
                     <div class="collapsible-body">
                         <ul>
                             <li><a href="#!">Customers<i class="material-icons">account_box</i></a></li>
-                            <li><a href="#!">Provision User<i class="material-icons">person_add</i></a></li>
-                            <li><a href="#!">Deactivate User<i class="material-icons">remove_circle</i></a></li>
+                            @*<li><a href="#!">Deactivate Customer<i class="material-icons">remove_circle</i></a></li>*@
+                            <li>
+                                <a asp-controller="Account" asp-action="ServiceEngineers">
+                                    Service Engineers <i class="material-icons">person_add</i>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </li>
