--- a/ASC.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/ASC.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -3,33 +3,31 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>@ViewData["Title"].</h2>
-<h3>Associate your @ViewData["LoginProvider"] account.</h3>
+<div class="container">
+    <div class="row">
+        <div class="col s12 m6 offset-m3">
+            <form asp-controller="Account" asp-action="ExternalLoginConfirmation"
+                asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <p class="text-info">
+                    You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
+                    Please enter an email address for this site below and click the Register button to finish
+                    logging in.
+                </p>
 
-<form asp-controller="Account" asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Association Form</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <input asp-for="Email" type="email" class="validate" />
+                        <label asp-for="Email" data-error="wrong" data-success="right">Email</label>
+                    </div>
+                </div>
 
-    <p class="text-info">
-        You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
-        Please enter an email address for this site below and click the Register button to finish
-        logging in.
-    </p>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
+                <div class="row center">
+                    <button class="btn waves-effect waves-light" type="submit">
+                        Submit <i class="material-icons right">send</i>
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
-        </div>
-    </div>
-</form>
-
-@section Scripts {
-    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-}
+</div>
