--- a/ASC.Web/Views/Account/Login.cshtml
+++ b/ASC.Web/Views/Account/Login.cshtml
@@ -10,7 +10,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col s12 m6 offset-m3">
+        <div class="col s12 m5 offset-m2">
             <form asp-controller="Account" asp-action="Login"
                   asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 <div asp-validation-summary="All" class="text-danger"></div>
@@ -46,6 +46,32 @@
                     <a asp-action="ForgotPassword">Forgot your password?</a>
                 </div>
             </form>
+        </div>
+        <div class="col s12 m4 offset-m1">
+            <h5>Login using External Providers.</h5>
+            <div class="divider"></div>
+            @{
+                List<AuthenticationDescription> loginProviders = SignInManager
+                    .GetExternalAuthenticationSchemes().ToList();
+                if (loginProviders.Count != 0)
+                {
+                    <form asp-controller="Account" asp-action="ExternalLogin"
+                        asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
+                        <div>
+                            <p>
+                                @foreach(AuthenticationDescription provider in loginProviders)
+                                {
+                                    <button type="submit" class="btn btn-default" name="provider"
+                                        value="@provider.AuthenticationScheme"
+                                        title="Login in using your @provider.DisplayName account">
+                                        @provider.AuthenticationScheme
+                                    </button>
+                                }
+                            </p>
+                        </div>
+                    </form>
+                }
+            }
         </div>
     </div>
 </div>
