End of chapter 7

--- a/ASC.Web/Views/Shared/_SecureLayout.cshtml
+++ b/ASC.Web/Views/Shared/_SecureLayout.cshtml
@@ -87,6 +87,29 @@
             <ul class="collapsible collapsible-accordion">
                 <li>
                     <a class="collapsible-header">
+                        Master Data <i class="material-icons">perm_data_setting</i>
+                    </a>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li>
+                                <a asp-controller="MasterData" asp-action="MasterKeys" class="collapsible-header">
+                                    Master Keys <i class="material-icons">data_usage</i>
+                                </a>
+                            </li>
+                            <li>
+                                <a asp-controller="MasterData" asp-action="MasterValues" class="collapsible-header">
+                                    Master Values <i class="material-icons">settings_system_daydream</i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <ul class="collapsible collapsible-accordion">
+                <li>
+                    <a class="collapsible-header">
                         Settings<i class="material-icons">settings</i>
                     </a>
                     <div class="collapsible-body">
