--- a/ASC.Web/Areas/Accounts/Views/Account/Customers.cshtml
+++ b/ASC.Web/Areas/Accounts/Views/Account/Customers.cshtml
@@ -1,4 +1,5 @@
-﻿@model CustomersViewModel
+﻿@using ASC.Web.Models;
+@model ASC.Web.Areas.Accounts.Models.CustomersViewModel
 @{
     Layout = "_SecureLayout";
 }
