--- a/ASC.Web/Areas/Configuration/Views/MasterData/MasterKeys.cshtml
+++ b/ASC.Web/Areas/Configuration/Views/MasterData/MasterKeys.cshtml
@@ -1,4 +1,4 @@
-﻿@using ASC.Web.Models.MasterDataViewModels;
+﻿@using ASC.Web.Areas.Configuration.Models;
 @model MasterKeysViewModel
 @{
     Layout = "_SecureLayout";
