--- a/ASC.Web/Views/Shared/_SecureLayout.cshtml
+++ b/ASC.Web/Views/Shared/_SecureLayout.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Http;
 @using ASC.Utilities;
+@using ASC.Web.Data;
 @inject IHttpContextAccessor UserHttpContext;
+@inject INavigationCacheOperations navigationCache;
 
 @{
     Layout = "_MasterLayout";
@@ -39,110 +41,8 @@
                 </a>
             </div>
         </li>
-        <li>
-            <a asp-area="ServiceRequests" asp-controller="Dashboard" asp-action="Dashboard"
-                class="collapsible-header">
-                <i class="material-icons">dashboard</i>Dashboard
-            </a>
-        </li>
-
-        <li>
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header">
-                        User Admininstration<i class="material-icons">supervisor_account</i>
-                    </a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li>
-                                <a asp-area="Accounts" asp-controller="Account" asp-action="Customers">
-                                    Customers <i class="material-icons">account_box</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a asp-area="Accounts" asp-controller="Account" asp-action="ServiceEngineers">
-                                    Service Engineers <i class="material-icons">person_add</i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <a class="collapsible-header" href="#!">
-                <i class="material-icons">perm_data_setting</i>Service Requests
-            </a>
-        </li>
-        <li>
-            <a class="collapsible-header" href="#!">
-                <i class="material-icons">message</i>Service Notifications
-            </a>
-        </li>
-        <li>
-            <a class="collapsible-header" href="#!">
-                <i class="material-icons">inbox</i>Promotions
-            </a>
-        </li>
-        <li>
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header">
-                        Master Data <i class="material-icons">perm_data_setting</i>
-                    </a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li>
-                                <a asp-area="Configuration" asp-controller="MasterData"
-                                    asp-action="MasterKeys" class="collapsible-header">
-                                    Master Keys <i class="material-icons">data_usage</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a asp-area="Configuration" asp-controller="MasterData"
-                                    asp-action="MasterValues" class="collapsible-header">
-                                    Master Values <i class="material-icons">settings_system_daydream</i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <ul class="collapsible collapsible-accordion">
-                <li>
-                    <a class="collapsible-header">
-                        Settings<i class="material-icons">settings</i>
-                    </a>
-                    <div class="collapsible-body">
-                        <ul>
-                            <li>
-                                <a asp-area="Accounts" asp-controller="Account" asp-action="Profile"
-                                    class="collapsible-header">
-                                    Profile <i class="material-icons">system_update_alt</i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="collapsible-header" href="#!" id="ancrResetPassword">
-                                    Reset Password <i class="material-icons">lock_outline</i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </li>
-        @*<li>
-            <a class="collapsible-header" href="#!">
-                <i class="material-icons">settings</i>Settings
-            </a>
-        </li>*@
-        <li>
-            <a class="collapsible-header" href="#!" id="ancrLogout">
-                <i class="material-icons">exit_to_app</i>Logout
-            </a>
-        </li>
+        @await Component.InvokeAsync("ASC.Utilities.Navigation.LeftNavigation",
+            await navigationCache.GetNavigationCacheAsync());
     </ul>
 </header>
 
