--- a/ASC.Web/Areas/ServiceRequests/Views/Dashboard/Dashboard.cshtml
+++ b/ASC.Web/Areas/ServiceRequests/Views/Dashboard/Dashboard.cshtml
@@ -1,10 +1,121 @@
+@using ASC.Models.BaseTypes
+@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor UserHttpContext
+@model ASC.Web.Areas.ServiceRequests.Models.DashboardViewModel
 @{
     Layout = "_SecureLayout";
 }
-<div class="section">
+
+<div class="row"></div>
+@await Html.PartialAsync("_ServiceRequestGrid", Model.ServiceRequests, new ViewDataDictionary(ViewData)
+{
+    { "SectionName", "Service Requests" },
+    { "Id", "tblServiceRequests" },
+    { "IsAudit", false },
+})
+
+@if (this.UserHttpContext.HttpContext.User.IsInRole(Roles.Admin.ToString()) ||
+    this.UserHttpContext.HttpContext.User.IsInRole(Roles.Engineer.ToString()))
+{
+    @await Html.PartialAsync("_ServiceRequestGrid", Model.AuditServiceRequests,
+        new ViewDataDictionary(ViewData)
+        {
+            { "SectionName", "Recent Updates" },
+            { "Id", "tblAuditServiceRequests" },
+            { "IsAudit", true },
+        });
+}
+
+@if (this.UserHttpContext.HttpContext.User.IsInRole(Roles.Admin.ToString()))
+{
     <div class="row">
-        <div class="col s12 m4" style="height: 500px">
-            Content Page will be displayed here.
+        <div class="col s6">
+            <ul class="collection with-header height-300px overflow-y">
+                <li class="collection-header">
+                    <h5>Active Service Engineers</h5>
+                </li>
+                @if (Model.ActiveServiceRequests.Any())
+                {
+                    @foreach(KeyValuePair<string, int> activeServiceRequest in Model.ActiveServiceRequests)
+                    {
+                        <li class="collection-item">
+                            <div>
+                                <span class="new badge" data-badge-caption="">@activeServiceRequest.Value</span>
+                                @activeServiceRequest.Key
+                            </div>
+                        </li>
+                    }
+                }
+                else
+                {
+                    <li class="collection-item">
+                        <div class="card-panel teal lighten-2 white-text">No Active Service Requests.</div>
+                    </li>
+                }
+            </ul>
         </div>
     </div>
-</div>
+}
+
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            // Initialize DataTable to show list of ServiceRequests
+            var table = $('#tblServiceRequests').DataTable({
+                'pageLength': 3,
+                // Number of records to be displayed per page
+                'lengthMenu': [[3, 5, 10, -1], [3, 5, 10, 'All']],
+                // Remove default Sorting
+                'sorting': [],
+                'columns': [
+                    { 'visible': false },
+                    { 'visible': false },
+                    null,
+                    { 'width': '20%' },
+                    null,
+                    null,
+                    null,
+                ],
+            });
+
+            var table = $('#tblAuditServiceRequests').DataTable({
+                'pageLength': 3,
+                // Number of records to be displayed per page
+                'lengthMenu': [[3, 5, 10, -1], [3, 5, 10, 'All']],
+                // Remove default Sorting
+                'sorting': [],
+                'columns': [
+                    { 'visible': false },
+                    { 'visible': false },
+                    null,
+                    { 'width': '20%' },
+                    null,
+                    null,
+                    null,
+                    null,
+                ],
+            });
+
+            // Set Styles for DataTable and Number of Records to be displayed in drop-down
+            $('.tblServiceRequests').css('width', '100%');
+            $('select[name$="ServiceRequests_length"]').material_select();
+
+            // On click of View icon, redirect to Service Request Details View based on RowKey
+            $(document).on('click', '.view', function () {
+                var tableId = '#' + $(this).parents('table').attr('id');
+                var serviceRequest = $(tableId).DataTable().row($(this).parents('tr')).data();
+
+                // For Service Request Table, populate id with RowKey
+                var id = serviceRequest[0];
+                // For Service Request Audit Table, populate id by splitting the Partition key with '-'
+                if (tableId.indexOf('Audit') >= 0) {
+                    id = serviceRequest[1]
+                        .substring(serviceRequest[1].indexOf('-') + 1, serviceRequest[1].length);
+                }
+
+                window.location.href = '@Url.Action("ServiceRequestDetails", "ServiceRequest",
+                    new { Area = "ServiceRequests" })?Id=' + id;
+            });
+        });
+    </script>
+}
