--- a/ASC.Web/Views/Shared/_Layout.cshtml
+++ b/ASC.Web/Views/Shared/_Layout.cshtml
@@ -91,8 +91,14 @@
         </div>
     </div>
     <div class="footer-copyright">
-        <div class="container">
-            Powered by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        <div class="container row">
+            <div class="col s8">
+                Powered by
+                <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+            </div>
+            <div class="col s4">
+                @await Html.PartialAsync("_SelectCulture")
+            </div>
         </div>
     </div>
 </footer>
