--- a/ASC.Web/wwwroot/css/style.css
+++ b/ASC.Web/wwwroot/css/style.css
@@ -134,6 +134,22 @@ header.secureLayout, main.secureLayout, footer.secureLayout {
   overflow-y: auto;
 }
 
+.padding-10px {
+  padding: 10px;
+}
+
+.font-size-12px {
+  font-size: 12px;
+}
+
+.padding-top-10px {
+  padding-top: 10px !important;
+}
+
+.padding-left-50px {
+  padding-left: 50px;
+}
+
 
 /* Bugfix for non-clickable checkboxes in Materialize
   See: https://github.com/Dogfalo/materialize/issues/5062
